--- a/main.ipynb
+++ b/main.ipynb
@@ -463,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Annual Trend -> Yearly plots on top of each other"
+    "### Annual Trend -> Yearly plots on top of each other || Eg: 2022, 2023 on top of each other"
    ]
   },
   {
@@ -549,6 +549,70 @@
     "year_list = [2022, 2023]\n",
     "for chemical in [\"SO2\"]:\n",
     "        annualTrend(chemical, places_list, year_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simplified time series for a place and for a particular chemical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def processDataset(csvPath): # returns a df object\n",
+    "    df = pd.read_csv(csvPath,  parse_dates=['datetime_UTC'])\n",
+    "    # Filtering\n",
+    "    workingColumns = ['datetime_UTC', 'quality', 'vertical_amount']\n",
+    "    df = df[workingColumns]\n",
+    "    df = df[df.quality == 'high quality na']\n",
+    "    # df = df[df.quality.isin(['high quality na', 'medium quality na'])]\n",
+    "    #############################\n",
+    "    \n",
+    "    df['datetime_EST'] = df['datetime_UTC'].dt.tz_localize('UTC').dt.tz_convert('America/New_York') # change into EST\n",
+    "    # Extract date, year, month, hour, time, rounded_hours\n",
+    "    df.loc[:, 'Date'] = df['datetime_EST'].dt.date\n",
+    "    df.loc[:, 'Year'] = df['datetime_EST'].dt.year\n",
+    "    df.loc[:, 'Month'] = df['datetime_EST'].dt.month_name()\n",
+    "    df.loc[:, 'Hour'] = df['datetime_EST'].dt.hour\n",
+    "    df.loc[:, 'Time'] = df['datetime_EST'].dt.time  \n",
+    "    return df\n",
+    "\n",
+    "def simplified_timeSeries(chemical, places_list):\n",
+    "    preprocessed_csv_path = {}\n",
+    "    for place in places_list:\n",
+    "        preprocessed_csv_path[place] = f\"{data_folder_path}/{chemical}_{place}.csv\"\n",
+    "\n",
+    "    for place, path in preprocessed_csv_path.items():\n",
+    "        df = processDataset(path)\n",
+    "        df['YearMonth'] = df['datetime_EST'].dt.to_period('M')  # Convert to 'YYYY-MM'\n",
+    "        df['YearMonth'] = df['YearMonth'].astype(str)\n",
+    "        df['YearMonth_dt'] = pd.to_datetime(df['YearMonth'])\n",
+    "        # display(df)\n",
+    "        fig, ax = plt.subplots(figsize=(10, 5))\n",
+    "        g = sns.lineplot(x=df['YearMonth_dt'], y=df['vertical_amount'], ax=ax, err_style=\"bars\", errorbar=(\"se\"), marker=\"o\")\n",
+    "        # g = sns.lineplot(x=df['YearMonth_dt'], y=df['vertical_amount'], ax=ax, err_style=\"bars\", errorbar=(\"se\"), marker=\"o\", hue=df[\"Year\"], palette=\"bright\")\n",
+    "\n",
+    "        ax.xaxis.set_major_formatter(dates.DateFormatter('%b'))\n",
+    "        ax.tick_params(axis='x', rotation=30)\n",
+    "\n",
+    "        sec_xaxis = ax.secondary_xaxis(-0.09)\n",
+    "        sec_xaxis.xaxis.set_major_locator(dates.YearLocator())\n",
+    "        sec_xaxis.xaxis.set_major_formatter(dates.DateFormatter('%Y'))\n",
+    "        sec_xaxis.spines['bottom'].set_visible(False)\n",
+    "\n",
+    "        g.set(xlabel=' ', ylabel=r\"Vertical Column Amount [moles/m$\\mathregular{^2}$]\", title=f\"{place}\")\n",
+    "        plt.show()\n",
+    "\n",
+    "\n",
+    "data_folder_path = \"/Users/ujjawal/Documents/Work/PandoraWork_2025/Data\"\n",
+    "places_list = [\"Goddard\"]\n",
+    "chemical = \"HCHO\"\n",
+    "simplified_timeSeries(chemical, places_list)"
    ]
   },
   {
